change links to link & remove underscore dependency

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "route-registry",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,16 +9,12 @@
   "keywords": [
     "Express",
     "routes",
-    "named",
-    "routes"
+    "named routes",
   ],
   "author": "Nouman Saleem",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git://github.com/NoumanSaleem/route-registry"
-  },
-  "dependencies": {
-    "underscore": "~1.6.0"
   }
 }
