--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [
     "Express",
     "routes",
-    "named routes",
+    "named routes"
   ],
   "author": "Nouman Saleem",
   "license": "MIT",
